Add legacy autostart guard for TypeScript runtime bootstrap

--- a/ts-demo.html
+++ b/ts-demo.html
@@ -14,6 +14,9 @@
         <button id="captureButton" type="button">Capture</button>
       </div>
     </main>
+    <script>
+      window.__XAOS_DISABLE_AUTOBOOT__ = true;
+    </script>
     <script src="/js/xaos.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
