--- a/ts-demo.html
+++ b/ts-demo.html
@@ -8,16 +8,12 @@
   <body>
     <main class="layout">
       <h1>XaoS TypeScript Demo</h1>
-      <p>Legacy renderer wired through typed runtime boundary.</p>
+      <p>Pure TypeScript renderer and zoom runtime.</p>
       <canvas id="canvas"></canvas>
       <div class="controls">
         <button id="captureButton" type="button">Capture</button>
       </div>
     </main>
-    <script>
-      window.__XAOS_DISABLE_AUTOBOOT__ = true;
-    </script>
-    <script src="/js/xaos.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
