--- a/index.html
+++ b/index.html
@@ -1,106 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<meta name="description" content="">
-	<meta name="author" content="">
-
-	<title>XaoS.js</title>
-
-	<!-- Bootstrap core CSS -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-
-	<!-- Custom styles for this template -->
-    <link href="starter-template.css" rel="stylesheet">
-
-</head>
-
-<body>
-
-<nav class="navbar navbar-inverse navbar-fixed-top">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="#">XaoS.js</a>
-		</div>
-		<div id="navbar" class="collapse navbar-collapse">
-			<ul class="nav navbar-nav">
-				<li><a href="#" data-toggle="modal" data-target="#about">About</a></li>
-				<li><a href="http://github.com/jblang/XaoSjs">GitHub</a></li>
-			</ul>
-		</div><!--/.nav-collapse -->
-	</div>
-</nav>
-
-<div class="container">
-    <canvas id="canvas">
-        <p>Your browser doesn't seem to support the &lt;canvas&gt; tag.
-            Try <a href="http://www.google.com/chrome">Chrome</a> or <a href="http://firefox.com">Firefox</a>.</p>
-    </canvas>
-    <div id="controls">
-      <button id ="fullScreenButton" class = "btn btn-primary" onclick="goFullScreen();"></button>
-      <a href="index.html" id ="resetButton" class = "btn btn-danger">Reset</a>
-      <a href="#" id = "saveCanvasButton" class = "btn btn-primary" download="image.png" onclick="saveCanvas()">Capture</a><br/>
-    </div>
-    <div id = "instructions">
-        <u style="font-weight: bold;">Instructions</u><br/>
-        <strong>Click on "Browse Mode" to perform zoom</strong><br/>
-        <strong>Click on "Capture Mode" to export canvas as image</strong><br/>
-        <strong>Mouse Users: Left-click to zoom in, right-click to zoom out</strong><br/>
-        <strong>Touch Device Users: Use one finger to zoom in, two fingers to zoom out. Interrupt zoom with one finger.</strong>
-    </div>
-    </div>
-    <div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">About XaoS.js</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Created by <a href="https://www.linkedin.com/in/jblangston">J.B. Langston</a> based on code from <a href="http://xaos.sf.net">XaoS</a> and <a href="http://nextfractal.nextbreakpoint.com/">NextFractal</a>.</p>
-                    <p>Built with <a href="http://getbootstrap.com/">Bootstrap</a> using the Cyborg theme from <a href="http://bootswatch.com/">Bootswatch</a>.</p>
-                    <p>
-                    XaoS.js is free software: you can redistribute it and/or modify
-                    it under the terms of the GNU General Public License as published by
-                    the Free Software Foundation, either version 3 of the License, or
-                    (at your option) any later version.
-
-                    XaoS.js is distributed in the hope that it will be useful,
-                    but WITHOUT ANY WARRANTY; without even the implied warranty of
-                    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-                    GNU General Public License for more details.
-
-                    You should have received a copy of the GNU General Public License
-                    along with XaoS.js.  If not, see <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses</a>.
-                    </p>
-                    <p>Visit the project on <a href="http://github.com/jblang/XaoSjs">GitHub</a>!</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div><!-- /.container -->
-
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="js/ie10-viewport-bug-workaround.js"></script>
-<script src="js/xaos.js"></script>
-<script src="js/starter-template.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>XaoS TypeScript</title>
+  </head>
+  <body>
+    <main class="layout">
+      <h1>XaoS TypeScript</h1>
+      <p>Pure TypeScript renderer and zoom runtime.</p>
+      <canvas id="canvas">
+        <p>
+          Your browser does not support the <code>canvas</code> element. Try a
+          modern browser.
+        </p>
+      </canvas>
+      <div class="controls">
+        <button id="captureButton" type="button">Capture</button>
+      </div>
+      <section>
+        <h2>Instructions</h2>
+        <p>Left-click to zoom in and right-click to zoom out.</p>
+        <p>Touch: one finger zooms in, two fingers zoom out.</p>
+      </section>
+      <section>
+        <h2>About</h2>
+        <p>
+          XaoS TypeScript is based on the XaoS fractal zooming algorithm and the
+          original XaoS.js adaptation.
+        </p>
+        <p>
+          Source: <a href="https://github.com/jaypatel1227/XaoSts">GitHub</a>
+        </p>
+      </section>
+    </main>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
