Remove migration artifacts and present TS-native project

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
       <section>
         <h2>About</h2>
         <p>
-          XaoS TypeScript is based on the XaoS fractal zooming algorithm and the
-          original XaoS.js adaptation.
+          XaoS TypeScript is based on the XaoS fractal zooming algorithm.
         </p>
         <p>
           Source: <a href="https://github.com/jaypatel1227/XaoSts">GitHub</a>
