feat: migrate web/core workspace and add approximation rendering mode

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -17,6 +17,11 @@
       </canvas>
       <div class="controls">
         <button id="captureButton" type="button">Capture</button>
+        <label for="renderModeSelect">Render mode</label>
+        <select id="renderModeSelect" name="render-mode">
+          <option value="approximation">Approximation</option>
+          <option value="high-fidelity">High fidelity</option>
+        </select>
       </div>
       <section>
         <h2>Instructions</h2>
